adjusted internal links

--- a/src/contact.html
+++ b/src/contact.html
@@ -96,15 +96,15 @@
                     >
                   </li>
                   <li class="menu-item">
-                    <a href="/event-calendar.html">Event Calendar</a>
+                    <a href="/event-calendar">Event Calendar</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/services.html">Services</a>
+                    <a href="/services">Services</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/resources.html">Resources</a>
+                    <a href="/resources">Resources</a>
                   </li>
-                  <li class="menu-item"><a href="/contact.html">Contact</a></li>
+                  <li class="menu-item"><a href="/contact">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -163,7 +163,7 @@
           <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="contact.html">Oklahoma City, OKlahoma</a>
+              <a href="contact">Oklahoma City, OKlahoma</a>
             </p>
           </div>
         </div>
@@ -279,7 +279,7 @@
             <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
             <div class="wptb-item--holder">
               <p class="wptb-item--description">
-                <a href="contact.html">Oklahoma City, Oklahoma</a>
+                <a href="contact">Oklahoma City, Oklahoma</a>
               </p>
             </div>
           </div>
@@ -397,7 +397,7 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/event-calendar.html">Event Calendar</a>
+                        <a href="/event-calendar">Event Calendar</a>
                       </li>
                       <li class="menu-item">
                         <a href="https://gallery.dustandrunphotos.com"
@@ -405,7 +405,7 @@
                         >
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Services</a>
+                        <a href="/services">Services</a>
                       </li>
                     </ul>
                   </div>
@@ -435,13 +435,13 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/resources.html">Race Director Resources</a>
+                        <a href="/resources">Race Director Resources</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Booking</a>
+                        <a href="/services">Booking</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/contact.html">Contact</a>
+                        <a href="/contact">Contact</a>
                       </li>
                     </ul>
                   </div>
