--- a/src/index.html
+++ b/src/index.html
@@ -94,15 +94,15 @@
                     >
                   </li>
                   <li class="menu-item">
-                    <a href="/event-calendar.html">Event Calendar</a>
+                    <a href="/event-calendar">Event Calendar</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/services.html">Services</a>
+                    <a href="/services">Services</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/resources.html">Resources</a>
+                    <a href="/resources">Resources</a>
                   </li>
-                  <li class="menu-item"><a href="/contact.html">Contact</a></li>
+                  <li class="menu-item"><a href="/contact">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -161,7 +161,7 @@
           <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="contact.html">Oklahoma City, OKlahoma</a>
+              <a href="contact">Oklahoma City, OKlahoma</a>
             </p>
           </div>
         </div>
@@ -205,10 +205,10 @@
       <button class="aside_close">Close <i class="bi bi-x-lg"></i></button>
 
       <div class="aside_logo logo">
-        <a href="index.html" class="light_logo"
+        <a href="/" class="light_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
-        <a href="index.html" class="dark_logo"
+        <a href="/" class="dark_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
       </div>
@@ -278,7 +278,7 @@
             <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
             <div class="wptb-item--holder">
               <p class="wptb-item--description">
-                <a href="contact-1.html">Oklahoma City, Oklahoma</a>
+                <a href="contact">Oklahoma City, Oklahoma</a>
               </p>
             </div>
           </div>
@@ -481,7 +481,7 @@
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--meta">
-                                            <h4><a href="project-details.html">California Fall Collection 2023</a></h4>
+                                            <h4><a href="project-details">California Fall Collection 2023</a></h4>
                                             <p>By Jonathon Willson</p>
                                         </div>
                                     </div>
@@ -496,7 +496,7 @@
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--meta">
-                                            <h4><a href="project-details.html">Brown girl next door</a></h4>
+                                            <h4><a href="project-details">Brown girl next door</a></h4>
                                             <p>By Jonathon Willson</p>
                                         </div>
                                     </div>
@@ -511,7 +511,7 @@
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--meta">
-                                            <h4><a href="project-details.html">Fashion next stage</a></h4>
+                                            <h4><a href="project-details">Fashion next stage</a></h4>
                                             <p>By Jonathon Willson</p>
                                         </div>
                                     </div>
@@ -526,7 +526,7 @@
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--meta">
-                                            <h4><a href="project-details.html">Jenifer in green</a></h4>
+                                            <h4><a href="project-details">Jenifer in green</a></h4>
                                             <p>By Jonathon Willson</p>
                                         </div>
                                     </div>
@@ -541,7 +541,7 @@
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--meta">
-                                            <h4><a href="project-details.html">Sunflower Boho girl</a></h4>
+                                            <h4><a href="project-details">Sunflower Boho girl</a></h4>
                                             <p>By Jonathon Willson</p>
                                         </div>
                                     </div>
@@ -556,7 +556,7 @@
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--meta">
-                                            <h4><a href="project-details.html">Iceland girl</a></h4>
+                                            <h4><a href="project-details">Iceland girl</a></h4>
                                             <p>By Jonathon Willson</p>
                                         </div>
                                     </div>
@@ -571,7 +571,7 @@
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--meta">
-                                            <h4><a href="project-details.html">Summer sadness</a></h4>
+                                            <h4><a href="project-details">Summer sadness</a></h4>
                                             <p>By Jonathon Willson</p>
                                         </div>
                                     </div>
@@ -586,7 +586,7 @@
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--meta">
-                                            <h4><a href="project-details.html">Festive mode one</a></h4>
+                                            <h4><a href="project-details">Festive mode one</a></h4>
                                             <p>By Jonathon Willson</p>
                                         </div>
                                     </div>
@@ -601,7 +601,7 @@
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--meta">
-                                            <h4><a href="project-details.html">Bright Boho Sunshine0</a></h4>
+                                            <h4><a href="project-details">Bright Boho Sunshine0</a></h4>
                                             <p>By Jonathon Willson</p>
                                         </div>
                                     </div>
@@ -645,7 +645,7 @@
                   </div>
                   <div class="wptb-item--holder">
                     <h4 class="wptb-item--title">
-                      <a href="service-details.html"
+                      <a href="service-details"
                         >Participant-Paid Photography</a
                       >
                     </h4>
@@ -668,7 +668,7 @@
                   </div>
                   <div class="wptb-item--holder">
                     <h4 class="wptb-item--title">
-                      <a href="service-details.html"
+                      <a href="service-details"
                         >Flat-Rate Event Coverage</a
                       >
                     </h4>
@@ -691,7 +691,7 @@
                   </div>
                   <div class="wptb-item--holder">
                     <h4 class="wptb-item--title">
-                      <a href="service-details.html"
+                      <a href="services"
                         >Branded Sponsor Packages</a
                       >
                     </h4>
@@ -1194,7 +1194,7 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/event-calendar.html">Event Calendar</a>
+                        <a href="/event-calendar">Event Calendar</a>
                       </li>
                       <li class="menu-item">
                         <a href="https://gallery.dustandrunphotos.com"
@@ -1202,7 +1202,7 @@
                         >
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Services</a>
+                        <a href="/services">Services</a>
                       </li>
                     </ul>
                   </div>
@@ -1212,7 +1212,7 @@
               <div class="col-lg-6 col-md-4 mb-5 mb-md-0 order-1 order-md-0">
                 <div class="footer-widget text-center">
                   <div class="logo mr-bottom-55">
-                    <!--   <a href="index-4.html" class=""><img src="./assets/img/" alt="logo"></a> -->
+                    <!--   <a href="index-4" class=""><img src="./assets/img/" alt="logo"></a> -->
                   </div>
 
                   <div class="wptb-newsletter-box">
@@ -1232,13 +1232,13 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/resources.html">Race Director Resources</a>
+                        <a href="/resources">Race Director Resources</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Booking</a>
+                        <a href="/services">Booking</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/contact.html">Contact</a>
+                        <a href="/contact">Contact</a>
                       </li>
                     </ul>
                   </div>
