--- a/src/race-day-photo-tips.html
+++ b/src/race-day-photo-tips.html
@@ -97,15 +97,15 @@
                     >
                   </li>
                   <li class="menu-item">
-                    <a href="/event-calendar.html">Event Calendar</a>
+                    <a href="/event-calendar">Event Calendar</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/services.html">Services</a>
+                    <a href="/services">Services</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/resources.html">Resources</a>
+                    <a href="/resources">Resources</a>
                   </li>
-                  <li class="menu-item"><a href="/contact.html">Contact</a></li>
+                  <li class="menu-item"><a href="/contact">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -164,7 +164,7 @@
           <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="contact.html">Oklahoma City, OKlahoma</a>
+              <a href="contact">Oklahoma City, OKlahoma</a>
             </p>
           </div>
         </div>
@@ -208,10 +208,10 @@
       <button class="aside_close">Close <i class="bi bi-x-lg"></i></button>
 
       <div class="aside_logo logo">
-        <a href="index.html" class="light_logo"
+        <a href="/" class="light_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
-        <a href="index.html" class="dark_logo"
+        <a href="/" class="dark_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
       </div>
@@ -281,7 +281,7 @@
             <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
             <div class="wptb-item--holder">
               <p class="wptb-item--description">
-                <a href="contact-1.html">Oklahoma City, Oklahoma</a>
+                <a href="contact">Oklahoma City, Oklahoma</a>
               </p>
             </div>
           </div>
@@ -517,7 +517,7 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/event-calendar.html">Event Calendar</a>
+                        <a href="/event-calendar">Event Calendar</a>
                       </li>
                       <li class="menu-item">
                         <a href="https://gallery.dustandrunphotos.com"
@@ -525,7 +525,7 @@
                         >
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Services</a>
+                        <a href="/services">Services</a>
                       </li>
                     </ul>
                   </div>
@@ -555,13 +555,13 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/resources.html">Race Director Resources</a>
+                        <a href="/resources">Race Director Resources</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Booking</a>
+                        <a href="/services">Booking</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/contact.html">Contact</a>
+                        <a href="/contact">Contact</a>
                       </li>
                     </ul>
                   </div>
