--- a/src/404.html
+++ b/src/404.html
@@ -86,13 +86,13 @@
                     >
                   </li>
                   <li class="menu-item">
-                    <a href="/event-calendar.html">Event Calendar</a>
+                    <a href="/event-calendar">Event Calendar</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/service-details.html">Services</a>
+                    <a href="/services">Services</a>
                   </li>
-                  <li class="menu-item"><a href="/about.html">About</a></li>
-                  <li class="menu-item"><a href="/contact.html">Contact</a></li>
+                  <li class="menu-item"><a href="/resources">Resources</a></li>
+                  <li class="menu-item"><a href="/contact">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -151,7 +151,7 @@
           <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="contact.html">Oklahoma City, OKlahoma</a>
+              <a href="contact">Oklahoma City, OKlahoma</a>
             </p>
           </div>
         </div>
@@ -195,10 +195,10 @@
       <button class="aside_close">Close <i class="bi bi-x-lg"></i></button>
 
       <div class="aside_logo logo">
-        <a href="index.html" class="light_logo"
+        <a href="/" class="light_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
-        <a href="index.html" class="dark_logo"
+        <a href="/" class="dark_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
       </div>
@@ -268,7 +268,7 @@
             <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
             <div class="wptb-item--holder">
               <p class="wptb-item--description">
-                <a href="contact-1.html">Oklahoma City, Oklahoma</a>
+                <a href="contact">Oklahoma City, Oklahoma</a>
               </p>
             </div>
           </div>
@@ -333,7 +333,7 @@
                   </div>
 
                   <div class="text-center mr-top-30">
-                    <a href="index-4.html" class="btn">
+                    <a href="/" class="btn">
                       <span class="btn-wrap">
                         <span class="text-first">Homepage</span>
                       </span>
