--- a/src/resources.html
+++ b/src/resources.html
@@ -97,15 +97,15 @@
                     >
                   </li>
                   <li class="menu-item">
-                    <a href="/event-calendar.html">Event Calendar</a>
+                    <a href="/event-calendar">Event Calendar</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/services.html">Services</a>
+                    <a href="/services">Services</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/resources.html">Resources</a>
+                    <a href="/resources">Resources</a>
                   </li>
-                  <li class="menu-item"><a href="/contact.html">Contact</a></li>
+                  <li class="menu-item"><a href="/contact">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -164,7 +164,7 @@
           <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="contact.html">Oklahoma City, OKlahoma</a>
+              <a href="contact">Oklahoma City, OKlahoma</a>
             </p>
           </div>
         </div>
@@ -207,10 +207,10 @@
       <button class="aside_close">Close <i class="bi bi-x-lg"></i></button>
 
       <div class="aside_logo logo">
-        <a href="index.html" class="light_logo"
+        <a href="/" class="light_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
-        <a href="index.html" class="dark_logo"
+        <a href="/" class="dark_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
       </div>
@@ -280,7 +280,7 @@
             <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
             <div class="wptb-item--holder">
               <p class="wptb-item--description">
-                <a href="contact-1.html">Oklahoma City, Oklahoma</a>
+                <a href="contact">Oklahoma City, Oklahoma</a>
               </p>
             </div>
           </div>
@@ -339,7 +339,7 @@
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="race-day-photo-tips.html"
+                    <a href="race-day-photo-tips"
                       >Race Photo Best Practices and Tips</a
                     >
                     <p>
@@ -353,7 +353,7 @@
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="race-day-photo-checklist.html"
+                    <a href="race-day-photo-checklist"
                       >Race Day Photography Checklist</a
                     >
                     <p>
@@ -367,7 +367,7 @@
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="how-photo-bib-tagging-works.html"
+                    <a href="how-photo-bib-tagging-works"
                       >Bib-Tagging & Photo Search Explainer (for
                       Participants)</a
                     >
@@ -489,7 +489,7 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/event-calendar.html">Event Calendar</a>
+                        <a href="/event-calendar">Event Calendar</a>
                       </li>
                       <li class="menu-item">
                         <a href="https://gallery.dustandrunphotos.com"
@@ -497,7 +497,7 @@
                         >
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Services</a>
+                        <a href="/services">Services</a>
                       </li>
                     </ul>
                   </div>
@@ -507,7 +507,7 @@
               <div class="col-lg-6 col-md-4 mb-5 mb-md-0 order-1 order-md-0">
                 <div class="footer-widget text-center">
                   <div class="logo mr-bottom-55">
-                    <!--   <a href="index-4.html" class=""><img src="./assets/img/" alt="logo"></a> -->
+                    <!--   <a href="index-4" class=""><img src="./assets/img/" alt="logo"></a> -->
                   </div>
 
                   <div class="wptb-newsletter-box">
@@ -527,13 +527,13 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/resources.html">Race Director Resources</a>
+                        <a href="/resources">Race Director Resources</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Booking</a>
+                        <a href="/services">Booking</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/contact.html">Contact</a>
+                        <a href="/contact">Contact</a>
                       </li>
                     </ul>
                   </div>
