--- a/src/services.html
+++ b/src/services.html
@@ -96,15 +96,15 @@
                     >
                   </li>
                   <li class="menu-item">
-                    <a href="/event-calendar.html">Event Calendar</a>
+                    <a href="/event-calendar">Event Calendar</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/services.html">Services</a>
+                    <a href="/services">Services</a>
                   </li>
                   <li class="menu-item">
-                    <a href="/resources.html">Resources</a>
+                    <a href="/resources">Resources</a>
                   </li>
-                  <li class="menu-item"><a href="/contact.html">Contact</a></li>
+                  <li class="menu-item"><a href="/contact">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -163,7 +163,7 @@
           <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="contact.html">Oklahoma City, OKlahoma</a>
+              <a href="contact">Oklahoma City, OKlahoma</a>
             </p>
           </div>
         </div>
@@ -206,10 +206,10 @@
       <button class="aside_close">Close <i class="bi bi-x-lg"></i></button>
 
       <div class="aside_logo logo">
-        <a href="index.html" class="light_logo"
+        <a href="/" class="light_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
-        <a href="index.html" class="dark_logo"
+        <a href="/" class="dark_logo"
           ><img src="./assets/img/dark-logo-square.svg" alt="logo"
         /></a>
       </div>
@@ -279,7 +279,7 @@
             <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
             <div class="wptb-item--holder">
               <p class="wptb-item--description">
-                <a href="contact-1.html">Oklahoma City, Oklahoma</a>
+                <a href="contact">Oklahoma City, Oklahoma</a>
               </p>
             </div>
           </div>
@@ -459,12 +459,12 @@
                   <div class="wptb-item--features-bottom">
                     <div class="wptb-item--content flex-shrink-0">
                       <div class="logo">
-                        <a href="index.html" class="light_logo"
+                        <a href="/" class="light_logo"
                           ><img
                             src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
-                        <a href="index.html" class="dark_logo"
+                        <a href="/" class="dark_logo"
                           ><img
                             src="./assets/img/orp-logo-square.png"
                             alt="logo"
@@ -493,12 +493,12 @@
                   <div class="wptb-item--features-bottom">
                     <div class="wptb-item--content flex-shrink-0">
                       <div class="logo">
-                        <a href="index.html" class="light_logo"
+                        <a href="/" class="light_logo"
                           ><img
                             src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
-                        <a href="index.html" class="dark_logo"
+                        <a href="/" class="dark_logo"
                           ><img
                             src="./assets/img/orp-logo-square.png"
                             alt="logo"
@@ -527,12 +527,12 @@
                   <div class="wptb-item--features-bottom">
                     <div class="wptb-item--content flex-shrink-0">
                       <div class="logo">
-                        <a href="index.html" class="light_logo"
+                        <a href="/" class="light_logo"
                           ><img
                             src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
-                        <a href="index.html" class="dark_logo"
+                        <a href="/" class="dark_logo"
                           ><img
                             src="./assets/img/orp-logo-square.png"
                             alt="logo"
@@ -561,12 +561,12 @@
                   <div class="wptb-item--features-bottom">
                     <div class="wptb-item--content flex-shrink-0">
                       <div class="logo">
-                        <a href="index.html" class="light_logo"
+                        <a href="/" class="light_logo"
                           ><img
                             src="./assets/img/orp-logo-square.png"
                             alt="logo"
                         /></a>
-                        <a href="index.html" class="dark_logo"
+                        <a href="/" class="dark_logo"
                           ><img
                             src="./assets/img/orp-logo-square.png"
                             alt="logo"
@@ -697,7 +697,7 @@
                         without upfront costs.<br />
                       </p>
                       <div class="wptb-item--button">
-                        <a class="btn creative" href="/contact-2.html">
+                        <a class="btn creative" href="/contact">
                           <div class="btn-wrap">
                             <span class="text-first">Book Your Race</span>
                           </div>
@@ -804,7 +804,7 @@
                         access to participants.<br />
                       </p>
                       <div class="wptb-item--button">
-                        <a class="btn creative" href="/contact-2.html">
+                        <a class="btn creative" href="/contact">
                           <div class="btn-wrap">
                             <span class="text-first"> Book Your Race </span>
                           </div>
@@ -913,7 +913,7 @@
                         turnaround and polished media assets.<br />
                       </p>
                       <div class="wptb-item--button">
-                        <a class="btn creative" href="/contact-2.html">
+                        <a class="btn creative" href="/contact">
                           <div class="btn-wrap">
                             <span class="text-first"> Book Your Race </span>
                           </div>
@@ -1028,7 +1028,7 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/event-calendar.html">Event Calendar</a>
+                        <a href="/event-calendar">Event Calendar</a>
                       </li>
                       <li class="menu-item">
                         <a href="https://gallery.dustandrunphotos.com"
@@ -1036,7 +1036,7 @@
                         >
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Services</a>
+                        <a href="/services">Services</a>
                       </li>
                     </ul>
                   </div>
@@ -1046,7 +1046,7 @@
               <div class="col-lg-6 col-md-4 mb-5 mb-md-0 order-1 order-md-0">
                 <div class="footer-widget text-center">
                   <div class="logo mr-bottom-55">
-                    <!--   <a href="index-4.html" class=""><img src="./assets/img/" alt="logo"></a> -->
+                    <!--   <a href="index-4" class=""><img src="./assets/img/" alt="logo"></a> -->
                   </div>
 
                   <div class="wptb-newsletter-box">
@@ -1066,13 +1066,13 @@
                   <div class="footer-nav">
                     <ul>
                       <li class="menu-item">
-                        <a href="/resources.html">Race Director Resources</a>
+                        <a href="/resources">Race Director Resources</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/services.html">Booking</a>
+                        <a href="/services">Booking</a>
                       </li>
                       <li class="menu-item">
-                        <a href="/contact.html">Contact Us</a>
+                        <a href="/contact">Contact Us</a>
                       </li>
                     </ul>
                   </div>
