--- a/src/404.html
+++ b/src/404.html
@@ -49,6 +49,21 @@
       ml("account", "1528737");
     </script>
     <!-- End MailerLite Universal -->
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-9KE0XT8S0N"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-9KE0XT8S0N");
+    </script>
   </head>
 
   <body class="theme-style--light">
