--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,21 @@
       ml("account", "1528737");
     </script>
     <!-- End MailerLite Universal -->
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-9KE0XT8S0N"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-9KE0XT8S0N");
+    </script>
   </head>
 
   <body class="theme-style--light theme-style--gradient">
@@ -645,9 +660,7 @@
                   </div>
                   <div class="wptb-item--holder">
                     <h4 class="wptb-item--title">
-                      <a href="service-details"
-                        >Participant-Paid Photography</a
-                      >
+                      <a href="service-details">Participant-Paid Photography</a>
                     </h4>
                     <p class="wptb-item--description">
                       Free for races. We shoot, tag, and sell directly to
@@ -668,9 +681,7 @@
                   </div>
                   <div class="wptb-item--holder">
                     <h4 class="wptb-item--title">
-                      <a href="service-details"
-                        >Flat-Rate Event Coverage</a
-                      >
+                      <a href="service-details">Flat-Rate Event Coverage</a>
                     </h4>
                     <p class="wptb-item--description">
                       All-inclusive packages with marketing and usage rights,
@@ -691,9 +702,7 @@
                   </div>
                   <div class="wptb-item--holder">
                     <h4 class="wptb-item--title">
-                      <a href="services"
-                        >Branded Sponsor Packages</a
-                      >
+                      <a href="services">Branded Sponsor Packages</a>
                     </h4>
                     <p class="wptb-item--description">
                       Overlay logos, create media galleries, and deliver value
