updated logo sizing and favicon

--- a/src/contact.html
+++ b/src/contact.html
@@ -24,7 +24,7 @@
 
     <!-- Favicon and touch Icons -->
     <link
-      href="./assets/img/favicon.ico"
+      href="./assets/img/favicon.png"
       rel="shortcut icon"
       type="image/png"
     />
@@ -88,12 +88,17 @@
           <div class="d-flex align-items-center justify-content-between">
             <!-- Left Part -->
             <div class="header_left_part d-flex align-items-center">
-              <div class="logo">
-                <a href="/" class="light_logo"
-                  ><img src="./assets/img/orp-logo-type.png" alt="logo"
+              <a href="/" class="light_logo"
+                  ><img
+                    src="./assets/img/orp-logo-type.png"
+                    alt="logo"
+                    style="max-height: 75px"
                 /></a>
                 <a href="/" class="dark_logo"
-                  ><img src="./assets/img/orp-logo-type.png" alt="logo"
+                  ><img
+                    src="./assets/img/orp-logo-type.png"
+                    alt="logo"
+                    style="max-height: 75px"
                 /></a>
               </div>
             </div>
