--- a/src/services.html
+++ b/src/services.html
@@ -24,7 +24,7 @@
 
     <!-- Favicon and touch Icons -->
     <link
-      href="./assets/img/favicon.ico"
+      href="./assets/img/favicon.png"
       rel="shortcut icon"
       type="image/png"
     />
@@ -89,10 +89,16 @@
             <div class="header_left_part d-flex align-items-center">
               <div class="logo">
                 <a href="/" class="light_logo"
-                  ><img src="./assets/img/orp-logo-type.png" alt="logo"
+                  ><img
+                    src="./assets/img/orp-logo-type.png"
+                    alt="logo"
+                    style="max-height: 75px"
                 /></a>
                 <a href="/" class="dark_logo"
-                  ><img src="./assets/img/orp-logo-type.png" alt="logo"
+                  ><img
+                    src="./assets/img/orp-logo-type.png"
+                    alt="logo"
+                    style="max-height: 75px"
                 /></a>
               </div>
             </div>
@@ -950,77 +956,17 @@
         </div>
         <div class="container">
           <div class="wptb-form--wrapper">
-            <div class="wptb-heading">
-              <div class="wptb-item--inner text-center">
-                <h1 class="wptb-item--title">Get In Touch</h1>
-                <div class="wptb-item--description">
-                  Contact me to start the booking process
-                </div>
-              </div>
-            </div>
-
             <div class="row">
               <div class="col-lg-8 offset-lg-2">
-                <form class="wptb-form" action="contact.php" method="post">
-                  <div class="wptb-form--inner">
-                    <div class="row">
-                      <div class="col-lg-6 col-md-6 mb-4">
-                        <div class="form-group">
-                          <input
-                            type="text"
-                            name="name"
-                            class="form-control"
-                            placeholder="Name*"
-                            required
-                          />
-                        </div>
-                      </div>
-
-                      <div class="col-lg-6 col-md-6 mb-4">
-                        <div class="form-group">
-                          <input
-                            type="email"
-                            name="email"
-                            class="form-control"
-                            placeholder="E-mail*"
-                            required
-                          />
-                        </div>
-                      </div>
-
-                      <div class="col-lg-12 col-md-12 mb-4">
-                        <div class="form-group">
-                          <input
-                            type="text"
-                            name="subject"
-                            class="form-control"
-                            placeholder="Subject"
-                          />
-                        </div>
-                      </div>
-
-                      <div class="col-md-12 col-lg-12 mb-4">
-                        <div class="form-group">
-                          <textarea
-                            name="message"
-                            class="form-control"
-                            placeholder="Text"
-                          ></textarea>
-                        </div>
-                      </div>
-
-                      <div class="col-md-12 col-lg-12">
-                        <div class="wptb-item--button text-center">
-                          <button class="btn" type="submit">
-                            <span class="btn-wrap">
-                              <span class="text-first">Send Mail</span>
-                            </span>
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </form>
+                <!-- Elfsight Form Builder |  Form Builder -->
+                <script
+                  src="https://static.elfsight.com/platform/platform.js"
+                  async
+                ></script>
+                <div
+                  class="elfsight-app-18c9126f-fd75-435f-a44a-3f17762f8893"
+                  data-elfsight-app-lazy
+                ></div>
               </div>
             </div>
           </div>
