--- a/src/index.html
+++ b/src/index.html
@@ -320,8 +320,7 @@
         <div class="social-box style-square">
           <ul>
             <li>
-              <a
-                href="https://www.facebook.com/people/Oklahoma-Race-Photos/61576551356811/"
+              <a href="https://www.facebook.com/dustandrunphotos"
                 ><i class="bi bi-facebook"></i
               ></a>
             </li>
@@ -348,7 +347,7 @@
           <div class="wptb-item--inner text-center">
             <!-- <h6 class="wptb-item--subtitle">Photography Agency</h6> -->
             <h1 class="wptb-item--title">
-              Dust and Run Photos<br />
+              Oklahoma Race Photos<br />
               That Capture the Finish <br />
               and the <span>Feeling</span>
             </h1>
