--- a/src/index.html
+++ b/src/index.html
@@ -358,10 +358,10 @@
           </div>
         </div>
 
-        <!-- <div class="swiper-container wptb-swiper-slider-four">    
-                    <!-- swiper slides --
+         <div class="swiper-container wptb-swiper-slider-four">    
+                    <!-- swiper slides -->
                     <div class="swiper-wrapper">
-                        <!-- Slide Item --
+                        <!-- Slide Item -->
                         <div class="swiper-slide">
                             <div class="wptb-slider--item">
                                 <div class="wptb-slider--image">
@@ -369,7 +369,47 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End Slide Item --
+                        <!-- End Slide Item -->
+
+                        <!-- Slide Item -->
+                        <div class="swiper-slide">
+                            <div class="wptb-slider--item">
+                                <div class="wptb-slider--image">
+                                    <img src="./assets/img/slider/2.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Slide Item -->
+
+                        <!-- Slide Item -->
+                        <div class="swiper-slide">
+                            <div class="wptb-slider--item">
+                                <div class="wptb-slider--image">
+                                    <img src="./assets/img/slider/3.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Slide Item -->
+
+                        <!-- Slide Item -->
+                        <div class="swiper-slide">
+                            <div class="wptb-slider--item">
+                                <div class="wptb-slider--image">
+                                    <img src="./assets/img/slider/4.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Slide Item -->
+
+                        <!-- Slide Item -->
+                        <div class="swiper-slide">
+                            <div class="wptb-slider--item">
+                                <div class="wptb-slider--image">
+                                    <img src="./assets/img/slider/5.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Slide Item -->
 
                         <!-- Slide Item --
                         <div class="swiper-slide">
@@ -399,49 +439,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End Slide Item --
-
-                        <!-- Slide Item --
-                        <div class="swiper-slide">
-                            <div class="wptb-slider--item">
-                                <div class="wptb-slider--image">
-                                    <img src="./assets/img/slider/41.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Slide Item --
-
-                        <!-- Slide Item --
-                        <div class="swiper-slide">
-                            <div class="wptb-slider--item">
-                                <div class="wptb-slider--image">
-                                    <img src="./assets/img/slider/38.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Slide Item --
-
-                        <!-- Slide Item --
-                        <div class="swiper-slide">
-                            <div class="wptb-slider--item">
-                                <div class="wptb-slider--image">
-                                    <img src="./assets/img/slider/39.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Slide Item --
-
-                        <!-- Slide Item --
-                        <div class="swiper-slide">
-                            <div class="wptb-slider--item">
-                                <div class="wptb-slider--image">
-                                    <img src="./assets/img/slider/40.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Slide Item --
+                        <!-- End Slide Item -->
                     </div>
-                </div> -->
+                </div> 
 
         <!-- Layer Image -->
         <div class="wptb-item-layer wptb-item-layer-one both-version">
@@ -477,16 +477,16 @@
               <div class="grid-item">
                 <div class="wptb-item--inner">
                   <div class="wptb-item--image">
-                    <img src="./assets/img/projects/IMG_0080.JPG" alt="img" />
+                    <img src="./assets/img/projects/PoppyLove5k.jpg" alt="img" />
                   </div>
 
                   <div class="wptb-item--holder">
                     <div class="wptb-item--meta">
                       <h4>
                         <a
-                          href="https://oklahomaracesphotos.smugmug.com/Events/5k-Clinton-OK-2024"
-                          >Clinton Classic 2024</a
-                        >
+                          href="https://gallery.dustandrunphotos.com/Events/Poppy-Run-5k-2025"
+                          >Poppy Love 5k</a
+                        ><p>Oklahoma City, OK</p>
                       </h4>
                     </div>
                   </div>
@@ -496,7 +496,7 @@
                             <div class="grid-item"> 
                                 <div class="wptb-item--inner">
                                     <div class="wptb-item--image">
-                                        <img src="./assets/img/projects/1/2.jpg" alt="img">
+                                        <img src="./assets/img/projects/PoppyLove5k.jpg" alt="img">
                                     </div>
 
                                     <div class="wptb-item--holder">
@@ -1329,34 +1329,34 @@
     <script src="./assets/js/bootstrap.min.js"></script>
 
     <!-- WOW Scroll Effect -->
-    <script src="../plugins/wow/wow.min.js"></script>
+    <script src="./plugins/wow/wow.min.js"></script>
 
     <!-- Swiper Slider -->
-    <script src="../plugins/swiper/swiper-bundle.min.js"></script>
-    <script src="../plugins/swiper/swiper-gl.min.js"></script>
+    <script src="./plugins/swiper/swiper-bundle.min.js"></script>
+    <script src="./plugins/swiper/swiper-gl.min.js"></script>
 
     <!-- Odometer Counter -->
-    <script src="../plugins/odometer/appear.js"></script>
-    <script src="../plugins/odometer/odometer.js"></script>
+    <script src="./plugins/odometer/appear.js"></script>
+    <script src="./plugins/odometer/odometer.js"></script>
 
     <!-- Projects -->
-    <script src="../plugins/isotope/isotope.pkgd.min.js"></script>
-    <script src="../plugins/isotope/imagesloaded.pkgd.min.js"></script>
+    <script src="./plugins/isotope/isotope.pkgd.min.js"></script>
+    <script src="./plugins/isotope/imagesloaded.pkgd.min.js"></script>
 
-    <script src="../plugins/isotope/tilt.jquery.js"></script>
-    <script src="../plugins/isotope/isotope-init.js"></script>
+    <script src="./plugins/isotope/tilt.jquery.js"></script>
+    <script src="./plugins/isotope/isotope-init.js"></script>
 
     <!-- Fancybox -->
-    <script src="../plugins/fancybox/jquery.fancybox.min.js"></script>
+    <script src="./plugins/fancybox/jquery.fancybox.min.js"></script>
 
     <!-- Flatpickr -->
-    <script src="../plugins/flatpickr/flatpickr.min.js"></script>
+    <script src="./plugins/flatpickr/flatpickr.min.js"></script>
 
     <!-- Nice Select -->
-    <script src="../plugins/nice-select/jquery.nice-select.min.js"></script>
+    <script src="./plugins/nice-select/jquery.nice-select.min.js"></script>
 
     <!-- Cursor Effect -->
-    <script src="../plugins/cursor-effect/cursor-effect.js"></script>
+    <script src="./plugins/cursor-effect/cursor-effect.js"></script>
 
     <!-- Theme Custom JS -->
     <script src="./assets/js/theme.js"></script>
