--- a/src/services.html
+++ b/src/services.html
@@ -1109,34 +1109,34 @@
     <script src="./assets/js/bootstrap.min.js"></script>
 
     <!-- WOW Scroll Effect -->
-    <script src="../plugins/wow/wow.min.js"></script>
+    <script src="./plugins/wow/wow.min.js"></script>
 
     <!-- Swiper Slider -->
-    <script src="../plugins/swiper/swiper-bundle.min.js"></script>
-    <script src="../plugins/swiper/swiper-gl.min.js"></script>
+    <script src="./plugins/swiper/swiper-bundle.min.js"></script>
+    <script src="./plugins/swiper/swiper-gl.min.js"></script>
 
     <!-- Odometer Counter -->
-    <script src="../plugins/odometer/appear.js"></script>
-    <script src="../plugins/odometer/odometer.js"></script>
+    <script src="./plugins/odometer/appear.js"></script>
+    <script src="./plugins/odometer/odometer.js"></script>
 
     <!-- Projects -->
-    <script src="../plugins/isotope/isotope.pkgd.min.js"></script>
-    <script src="../plugins/isotope/imagesloaded.pkgd.min.js"></script>
+    <script src="./plugins/isotope/isotope.pkgd.min.js"></script>
+    <script src="./plugins/isotope/imagesloaded.pkgd.min.js"></script>
 
-    <script src="../plugins/isotope/tilt.jquery.js"></script>
-    <script src="../plugins/isotope/isotope-init.js"></script>
+    <script src="./plugins/isotope/tilt.jquery.js"></script>
+    <script src="./plugins/isotope/isotope-init.js"></script>
 
     <!-- Fancybox -->
-    <script src="../plugins/fancybox/jquery.fancybox.min.js"></script>
+    <script src="./plugins/fancybox/jquery.fancybox.min.js"></script>
 
     <!-- Flatpickr -->
-    <script src="../plugins/flatpickr/flatpickr.min.js"></script>
+    <script src="./plugins/flatpickr/flatpickr.min.js"></script>
 
     <!-- Nice Select -->
-    <script src="../plugins/nice-select/jquery.nice-select.min.js"></script>
+    <script src="./plugins/nice-select/jquery.nice-select.min.js"></script>
 
     <!-- Cursor Effect -->
-    <script src="../plugins/cursor-effect/cursor-effect.js"></script>
+    <script src="./plugins/cursor-effect/cursor-effect.js"></script>
 
     <!-- Theme Custom JS -->
     <script src="./assets/js/theme.js"></script>
