--- a/src/services.html
+++ b/src/services.html
@@ -321,7 +321,7 @@
           <ul>
             <li>
               <a
-                href="https://www.facebook.com/people/Oklahoma-Race-Photos/61576551356811/"
+                href="https://www.facebook.com/dustandrunphotos"
                 ><i class="bi bi-facebook"></i
               ></a>
             </li>
