--- a/src/404.html
+++ b/src/404.html
@@ -25,7 +25,7 @@
     <title>Dust and Run Photos</title>
 
     <!-- Styles Include -->
-    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.min.css" />
     <!-- MailerLite Universal -->
     <script>
       (function (w, d, e, u, f, l, n) {
@@ -386,8 +386,8 @@
     <script src="../plugins/swiper/swiper-gl.min.js"></script>
 
     <!-- Odometer Counter -->
-    <script src="../plugins/odometer/appear.js"></script>
-    <script src="../plugins/odometer/odometer.js"></script>
+    <script src="../plugins/odometer/appear.min.js"></script>
+    <script src="../plugins/odometer/odometer.min.js"></script>
 
     <!-- Fancybox -->
     <script src="../plugins/fancybox/jquery.fancybox.min.js"></script>
@@ -399,9 +399,9 @@
     <script src="../plugins/nice-select/jquery.nice-select.min.js"></script>
 
     <!-- Cursor Effect -->
-    <script src="../plugins/cursor-effect/cursor-effect.js"></script>
+    <script src="../plugins/cursor-effect/cursor-effect.min.js"></script>
 
     <!-- Theme Custom JS -->
-    <script src="./assets/js/theme.js"></script>
+    <script src="./assets/js/theme.min.js"></script>
   </body>
 </html>
