--- a/src/event-calendar.html
+++ b/src/event-calendar.html
@@ -35,7 +35,7 @@
     </title>
 
     <!-- Styles Include -->
-    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.min.css" />
     <!-- MailerLite Universal -->
     <script>
       (function (w, d, e, u, f, l, n) {
@@ -436,7 +436,7 @@
                     "
                   >
                     <img
-                      src="./assets/img/RRCA.2020.Member-Icon.png"
+                      src="./assets/img/RRCA.2020.Member-Icon.png" alt="RRCA Member Icon"
                       style="max-width: 75px"
                     />
                     <a
@@ -444,7 +444,7 @@
                       target="_blank"
                     >
                       <img
-                        src="https://www.racedirectorshq.com/listings/a79cb7a4-c6c1-400b-8b09-032cb715d997/badges/light/stacked/"
+                        src="https://www.racedirectorshq.com/listings/a79cb7a4-c6c1-400b-8b09-032cb715d997/badges/light/stacked/" alt="Race Directors HQ Icon"
                         style="max-width: 133px; max-height: 110px"
                     /></a>
                   </div>
@@ -466,21 +466,21 @@
               <ul>
                 <li>
                   <a
-                    href="https://www.facebook.com/profile.php?id=61576551356811"
+                    href="https://www.facebook.com/dustandrunphotos"
                     class="bi bi-facebook"
-                  ></a>
+                  ><span style="display: none;">Facebook</span></a>
                 </li>
                 <li>
                   <a
                     href="https://www.instagram.com/dustandrunphotos"
                     class="bi bi-instagram"
-                  ></a>
+                  ><span style="display: none;">Instagram</span></a>
                 </li>
                 <li>
                   <a
                     href="https://www.linkedin.com/in/bortami"
                     class="bi bi-linkedin"
-                  ></a>
+                  ><span style="display: none;">LinkedIn</span></a>
                 </li>
               </ul>
             </div>
@@ -507,8 +507,8 @@
     <script src="../plugins/swiper/swiper-gl.min.js"></script>
 
     <!-- Odometer Counter -->
-    <script src="../plugins/odometer/appear.js"></script>
-    <script src="../plugins/odometer/odometer.js"></script>
+    <script src="../plugins/odometer/appear.min.js"></script>
+    <script src="../plugins/odometer/odometer.min.js"></script>
 
     <!-- Fancybox -->
     <script src="../plugins/fancybox/jquery.fancybox.min.js"></script>
@@ -520,13 +520,11 @@
     <script src="../plugins/nice-select/jquery.nice-select.min.js"></script>
 
     <!-- Cursor Effect -->
-    <script src="../plugins/cursor-effect/cursor-effect.js"></script>
+    <script src="../plugins/cursor-effect/cursor-effect.min.js"></script>
 
     <!-- Theme Custom JS -->
-    <script src="./assets/js/theme.js"></script>
+    <script src="./assets/js/theme.min.js"></script>
 
-    <!-- Google Map Calling -->
-    <script src="./assets/js/map.js"></script>
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCUiaBC-cJ0wcEtqCUtoXF3I91o9wS42gQ"></script>
+
   </body>
 </html>
